<resources>
    <string name="app_name">Retro - Let\'s Go</string>
    <string name="button_addArcade">Add Arcade</string>
    <string name="arcadeTitle">Arcade Title</string>
    <string name="arcadeDescription">Arcade Description</string>
    <string name="arcadePhoneNumber">Arcade Phone Number</string>
    <string name="menu_addArcade">Add</string>
    <string name="menu_cancelArcade">Cancel</string>
    <string name="enter_arcade_title"> Please enter an Arcade Title </string>
    <string name="save_arcade"> Save Arcade </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_arcade_image">Select arcade image</string>
    <string name="change_arcade_image">Change arcade image</string>
    <string name="button_location">Set Arcade Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteArcade">Delete</string>
    <string name="signup_enterEmail">Enter Email</string>
    <string name="signup_createPassword">Create Password</string>
    <string name="signup_confirmPassword">Confirm Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="signup_signIn_redirect">Already Registered? Sign in here</string>
    <string name="signIn_enterEmail">Enter Email</string>
    <string name="signIn_enterPassword">Enter Password</string>
    <string name="signIn_btn">Sign In</string>
    <string name="signIn_signUp_redirect">Not yet registered? Sign up here</string>
    <string name="title_activity_arcade_maps">Map of All Arcades</string>
    <string name="arcade_added">Arcade Added!</string>
    <string name="arcade_saved">Arcade Saved!</string>
    <string name="game_added">Game Added!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="gameTitle">Game Title</string>
    <string name="gameDescription">Game Description</string>
    <string name="gameSystem">Game System</string>
    <string name="gameHighScore">High Score</string>
    <string name="button_addGame">Add Game</string>
    <string name="menu_addGame">Add</string>
    <string name="menu_cancelGame">Cancel</string>
    <string name="enter_game_title"> Please enter a Game Title </string>
    <string name="save_game"> Save Game </string>
    <string name="take_picture"> Take Picture </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_arcade">Add an Arcade</string>
    <string name="action_arcadeList">Arcades</string>
    <string name="action_game">Add a Game</string>
    <string name="action_gameList">Your Games</string>
    <string name="action_map">Arcade Locations</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Retro - Let\'s Go</string>
    <string name="nav_header_subtitle">homer@simpson.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="arcadeError">Error : Couldn\'t Add an Arcade...</string>
    <string name="gameError">Error : Couldn\'t Add a Game...</string>
    <string name="arcadesNotFound">No Arcades Added Yet...\nGo Find Some Arcades!</string>
    <string name="gamesNotFound">No Games Added Yet...\nGo Play Something!</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

</resources>