<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/arcadeListFragment"
            android:icon="@drawable/baseline_push_pin_24"
            android:title="@string/action_arcadeList" />
        <item
            android:id="@+id/gameListFragment"
            android:icon="@drawable/baseline_videogame_asset_24"
            android:title="@string/action_gameList" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/action_map" />
    </group>
    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/baseline_email_24"
                android:title="@string/action_send" />
        </menu>
    </item>
    <item android:title="Access Control">
      <menu>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_logout_24"
            android:onClick="signOut"
            android:title="@string/sign_out" />
      </menu>
    </item>
    <item android:title="Settings">
    <menu>
        <item
            android:id="@+id/night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_mode_night"
            android:title="Toggle Night Mode"
            app:showAsAction="always" />
    </menu>
    </item>

</menu>