<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="gamevm"
            type="ie.setu.retro_letsgo.ui.gameDetails.GameDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameGameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ie.setu.retro_letsgo.ui.game.gameFragment">


        <EditText
            android:id="@+id/gameTitle"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/gameTitle"
            android:inputType="text"
            android:text="@{gamevm.observableGame.gameTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/gameDescription"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/gameDescription"
            android:inputType="textPersonName"
            android:text="@{gamevm.observableGame.gameDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

        <EditText
            android:id="@+id/gameSystem"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/gameSystem"
            android:inputType="textPersonName"
            android:text="@{gamevm.observableGame.gameSystem}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameDescription" />


        <EditText
            android:id="@+id/gameHighScore"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/gameHighScore"
            android:inputType="number"
            android:text="@{gamevm.observableGame.highScore}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameSystem" />

        <Button
            android:id="@+id/btnAddGame"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/button_addGame"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameHighScore" />

        <Button
            android:id="@+id/takePicture"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/take_picture"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/btnAddGame"
            app:layout_constraintTop_toBottomOf="@+id/btnAddGame" />

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takePicture"
            app:layout_constraintVertical_bias="0.173"
            app:srcCompat="@drawable/ic_launcher_background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>