<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/arcadeListFragment">

    <fragment
        android:id="@+id/arcadeFragment"
        android:name="ie.setu.retro_letsgo.ui.arcade.ArcadeFragment"
        android:label="@string/action_arcade"
        tools:layout="@layout/fragment_arcade">
        <action
            android:id="@+id/action_arcadeFragment_to_arcadeListFragment"
            app:destination="@id/arcadeListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_arcadeFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_arcadeFragment_to_gameListFragment"
            app:destination="@id/gameListFragment" />
    </fragment>
    <fragment
        android:id="@+id/arcadeListFragment"
        android:name="ie.setu.retro_letsgo.ui.arcadeList.ArcadeListFragment"
        android:label="@string/action_arcadeList"
        tools:layout="@layout/fragment_arcade_list">
        <action
            android:id="@+id/action_arcadeListFragment_to_arcadeFragment"
            app:destination="@id/arcadeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_arcadeListFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_arcadeListFragment_to_gameListFragment"
            app:destination="@id/gameListFragment" />
        <action
            android:id="@+id/action_arcadeListFragment_to_arcadeMapFragment"
            app:destination="@id/arcadeMapFragment" />
        <action
            android:id="@+id/action_arcadeListFragment_to_arcadeDetailsFragment"
            app:destination="@id/arcadeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="ie.setu.retro_letsgo.ui.game.gameFragment"
        android:label="@string/action_game"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_arcadeFragment"
            app:destination="@id/arcadeFragment" />
        <action
            android:id="@+id/action_gameFragment_to_arcadeListFragment"
            app:destination="@id/arcadeListFragment" />
        <action
            android:id="@+id/action_gameFragment_to_gameListFragment"
            app:destination="@id/gameListFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameListFragment"
        android:name="ie.setu.retro_letsgo.ui.gameList.GameListFragment"
        android:label="@string/action_gameList"
        tools:layout="@layout/fragment_game_list">
        <action
            android:id="@+id/action_gameListFragment_to_arcadeListFragment"
            app:destination="@id/arcadeListFragment" />
        <action
            android:id="@+id/action_gameListFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_gameListFragment_to_arcadeFragment"
            app:destination="@id/arcadeFragment" />
        <action
            android:id="@+id/action_gameListFragment_to_gameDetailsFragment"
            app:destination="@id/gameDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/arcadeMapFragment"
        android:name="ie.setu.retro_letsgo.ArcadeMapFragment"
        android:label="fragment_arcade_map"
        tools:layout="@layout/fragment_arcade_map" />
    <fragment
        android:id="@+id/arcadeDetailsFragment"
        android:name="ie.setu.retro_letsgo.ui.arcadeDetails.ArcadeDetailsFragment"
        android:label="Arcade Details"
        tools:layout="@layout/fragment_arcade_details">
        <action
            android:id="@+id/action_arcadeDetailsFragment_to_arcadeListFragment"
            app:destination="@id/arcadeListFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_arcadeDetailsFragment_to_gameListFragment"
            app:destination="@id/gameListFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameDetailsFragment"
        android:name="ie.setu.retro_letsgo.ui.gameDetails.GameDetailsFragment"
        android:label="Game Details"
        tools:layout="@layout/fragment_game_details">
        <action
            android:id="@+id/action_gameDetailsFragment_to_gameListFragment"
            app:destination="@id/gameListFragment" />
        <action
            android:id="@+id/action_gameDetailsFragment_to_arcadeListFragment"
            app:destination="@id/arcadeListFragment" />
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.setu.retro_letsgo.ui.map.MapsFragment"
        android:label="Arcade Map"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_mapsFragment_to_arcadeDetailsFragment"
            app:destination="@id/arcadeDetailsFragment" />
    </fragment>

</navigation>